[FIX] line break in 'Follow' column by giving padding to left.
bzr revid: nco@tinyerp.com-20130501121234-u8gtjzccjw0h7dk1

--- a/addons/mail/static/src/css/mail.css
+++ b/addons/mail/static/src/css/mail.css
@@ -618,7 +618,7 @@
     margin-bottom: 4px;
 }
 .openerp .oe_followers .oe_invite{
-    float: right;
+    padding-left: 5px;
 }
 .openerp .oe_followers .oe_partner {
     height: 32px;
